--- a/SpringAdv/src/main/resources/application.properties
+++ b/SpringAdv/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:springwebdb
+spring.datasource.username=sa
+spring.datasource.password=
 
+#타임리프 뷰 템플릿의 루트 위치 설정 : static 내의 return 값 페이지가 열린다
+spring.thymeleaf.prefix=classpath:/static/
+
+# MySQL 연결하기
+#spring.datasource.url=jdbc :mysql://parkdb.crvbsg94z2oh.ap-northeast-2.rds.amazonaws.com:3306/blogdbjwt
+#spring.datasource.username=parkdb
+#spring.datasource.password=parkdb0326
+#spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
