--- a/SpringAdv/src/main/resources/application.properties
+++ b/SpringAdv/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url=jdbc:h2:mem:springwebdb
 spring.datasource.username=sa
 spring.datasource.password=
 
+# Port Change : 
+# server.port = 3065
+
 #타임리프 뷰 템플릿의 루트 위치 설정 : static 내의 return 값 페이지가 열린다
 spring.thymeleaf.prefix=classpath:/static/
 
